Changed footer from fixed to dynamic bottom Error in JS on Homepage cause Header didn't exist on the home page Added header and removed fixed position of footer removed nav margin because it overflowed Replaced the nav margin with padding Because of that, the padding would be added to header height

--- a/styling/homepage.css
+++ b/styling/homepage.css
@@ -1,3 +1,10 @@
+header {
+	min-height: 1px;
+	/* 1px height to prevent margin collapse */
+}
+header::after {
+	display: none;
+}
 nav ul {
 	display: inline-block;
 	padding: 0;
@@ -46,10 +53,6 @@ nav {
 	width: 20vw;
 	height: auto;
 }
-footer {
-	position: fixed;
-	bottom: 0;
-}
 main {
 	display: flex;
 	align-items: center;
@@ -58,6 +61,7 @@ main {
 body {
 	max-width: 85%;
 }
+
 @media screen and (max-width: 930px) {
 	.container {
 		justify-content: center;
